--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amilangues",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://selimbena.github.io/amilangues",
+  "homepage": "https://amilangues.com",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
